--- a/resources/help/version-info.css
+++ b/resources/help/version-info.css
@@ -7,14 +7,14 @@
 body {
   font-size: 18px;
   color: #1e1f20;
-  transform: scale(1.3);
+  transform: scale(1.6);
   transform-origin: 0 0;
   width: 520px;
 }
 .container {
   width: 520px;
   padding: 10px 0 10px 0;
-  background: url(../common/bg/bg-dendro.png);
+  background: url(../common/bg/bg-pyro.png);
   background-size: 100% 100%;
 }
 .log-cont {
