--- a/resources/help/index.css
+++ b/resources/help/index.css
@@ -1,16 +1,16 @@
 body {
   transform: scale(1);
   width: 830px;
-  background: url("../common/theme/bg-01.jpg");
+  background: url("../common/theme/bg.jpg");
 }
 @font-face {
-  font-family: "jty";
-  src: url("jty.OTF");
+  font-family: "HYWH-65W";
+  src: url("HYWH-65W.ttf");
   font-weight: normal;
   font-style: normal;
 }
 .container {
-  background: url(../common/theme/main-01.png) top left no-repeat;
+  background: url(../common/theme/main.png) top left no-repeat;
   background-size: 100% auto;
   width: 830px;
 }
@@ -80,7 +80,7 @@ body {
   transform: scale(0.85);
 }
 .help-title {
-	font-family: "jty";
+	font-family: "HYWH-65W";
   display: block;
   color: #d3bc8e;
   font-size: 18px;
@@ -88,7 +88,7 @@ body {
 }
 .help-desc {
 	padding-top:5px;
-	font-family: "jty";
+	font-family: "HYWH-65W";
   display: block;
   font-size: 15px;
   line-height: 18px;
