--- a/resources/help/index.css
+++ b/resources/help/index.css
@@ -5,7 +5,7 @@ body {
 }
 @font-face {
   font-family: "HYWH-65W";
-  src: url("HYWH-65W.ttf");
+  src: url("../common/font/HYWH-65W.ttf");
   font-weight: normal;
   font-style: normal;
 }
